# parrot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: download_models.py  main.py  test.py
src/: main.py
src/parrot/: __init__.py  translator.py
src/parrot/api/: main.py
src/parrot/cache/: __init__.py  translation_cache.py
src/parrot/config/: config.py
src/parrot/exception/: __init__.py  exception.py
src/parrot/model/: __init__.py  _loader_model.py  _translation_model.py  _translation_rag_model.py  ct2fast_m2m_translation_model.py  hyper_clova_x_translation_model.py  m2m_translation_model.py  mbart_translation_model.py  nllb_translation_model.py  opus_translation_model.py  qwen_translation_model.py  seamless_m4t_translation_model.py  varco_translation_model.py
src/translator/: __init__.py  config.py  models.py  translator.py
src/translator/config/: config.py
src/translator/model/: __init__.py  _loader_model.py  _translation_model.py  hyper_clova_x_translation_model.py  nllb_translation_model.py  opus_translation_model.py
