[tool.poetry]
name = "parrot"
version = "0.1.0"
description = ""
authors = ["JosephNK <nkw0608@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
torchvision = "0.17.2"
torchaudio = "2.2.2"
transformers = "^4.52.4"
sentencepiece = "^0.2.0"
accelerate = "^1.7.0"
huggingface-hub = "^0.33.0"
numpy = "1.26.4"
pandas = "^2.3.0"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
